# document_generator

./: .env  .gitignore  db.sqlite  open_coordinats.py  pyproject.toml  requirements.txt
authentication/: admin.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/static/: sitemap.xml
confighelper/: apps.py  checkermrz.py  chmm.py  models.py
core/: asgi.py  settings.py  urls.py
document_generator/: asgi.py  settings.py  urls.py  wsgi.py
home/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
home/migrations/: 0001_initial.py
idgenerator/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
idgenerator/migrations/: 0001_initial.py  0002_auto_20211104_2326.py  0002_usavisa.py  0003_auto_20211108_1348.py  0003_bankaccount.py  0004_auto_20211108_1447.py
plow/: basecreator.py  config.ini  crea  creator_zipper.py  extract_info_from_psd.py  plow.py  plow_ultra_new.py  potatoballs.py  psd_file_format_working.py  psdpsdtool.py  psdwiewer.py  read_info_from_img.py  remove_background.py  remove_bg.py  searchocr.py  state_usa_card.py  trim_white.py
request_da/: request_data.py  request_state_usa_card.py  ua_int.py  us_state.py  usa_visa.py
templates/: base.html  baseold.html  bootstrap.html
templates/accounts/: login.html  register.html
templates/accountss/: login.html  user_auth.html
templates/customers/: profile.html
templates/home/: billing.html  docsintegrate.html  forms.html  index.html  page-500.html  profile.html  (+6 more)
wallets/: admin.py  btcgate.py  forms.py  models.py  views.py
(+19 files in other folders)
